- Updated rakefile to only try to build .i swig files (thanks to Roy Sutton)
- Change App debugging output to be based on __WXDEBUG__ (Sean Long)
- Several corrections to the inheritance chains (Sean Long)
- Added TopLevelWindow (Sean Long)


====0.0.28 tag included all of this:===
- Checked in Robert Carlin's demo that is based on the wxPython demo.
  It's in samples/bigdemo, and you start it by running Main.rbw.
  It doesn't work yet, but will be great when it does!
- Get new inheritance chain code to compile under MS Win (Roy Sutton)
- Fix DC.h and WindowDC.i to properly handle pure virtual methods, 
  allowing the caret sample to work again
- Fixed ControlWithItems, Choice, ComboBox and ListBox to properly 
  handle pure virtual methods, allowing the controls sample to work again
- Properly mark more Dialog methods as being virtual (Roy Sutton)
- Fixed all the Event classes to properly handle pure virtual methods
- Fixed all the GridXxxRenderer classes to handle pure virtual methods
- Fixed all the Sizer classes to handle pure virtual methods
- Fixed TipProvider to be an abstract base class



====0.0.27 tag included all of this:===
- Added full inheritance to all classes
- Fixed parent of ProgressDialog to be Dialog


====0.0.26 tag included all of this:===
- Greatly enhanced Grid support (Sean Long)


====0.0.25 tag included all of this:===
- Added src/.cvsignore
- Added Button constants (BU_XXX)
- Added TextAttr class (Alex Fenton)
- Fixed some bugs in caret sample (Roy Sutton)
- Added Listbook support and a sample (Sean Long)
  (Note: On Linux, the sample just shows a blank window)
- Added missing LayoutConstraints#centre_x and centre_y (Roy Sutton)
- Added SplitterWindow (thanks to Roy Sutton)
- Added TreeCtrl (compiles and can be new'd, but might segfault)
- Minor fix to calendar sample (Roy Sutton)
- Fix how Calendar enums were being defined, so the calendar sample
  "highlight special dates" menu item now works (Roy Sutton)